--- a/app/src/main/res/layout/fragment_microsoft_tech.xml
+++ b/app/src/main/res/layout/fragment_microsoft_tech.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/homeBackground">
+    android:background="@color/microsoftTechBackground">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -26,7 +26,8 @@
                     android:layout_width="150dp"
                     android:layout_height="150dp"
                     android:layout_weight="1"
-                    android:src="@drawable/ic_logo" />
+                    android:src="@drawable/ic_logo"
+                    android:contentDescription="@string/app_name"/>
             </LinearLayout>
 
             <LinearLayout
@@ -41,7 +42,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:fontFamily="sans-serif"
-                    android:text="Android Master"
+                    android:text="@string/menu_slideshow"
                     android:textAlignment="center"
                     android:textAllCaps="true"
                     android:textAppearance="@style/TextAppearance.AppCompat.Display3"
@@ -52,7 +53,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/mLL_android_studio"
+                android:id="@+id/mLL_html"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="5dp"
@@ -64,7 +65,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:text="Android Studio"
+                    android:text="Excel 2010"
                     android:textAlignment="center"
                     android:textColor="@android:color/background_light"
                     android:textSize="25sp"
@@ -72,7 +73,6 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/mLL_java"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="5dp"
@@ -84,7 +84,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:text="Java Programming"
+                    android:text="Word 2010"
                     android:textAlignment="center"
                     android:textColor="@android:color/background_light"
                     android:textSize="25sp"
@@ -92,7 +92,6 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/mLL_kotlin"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="5dp"
@@ -104,7 +103,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:text="Kotlin"
+                    android:text="Advanced Excel"
                     android:textAlignment="center"
                     android:textColor="@android:color/background_light"
                     android:textSize="25sp"
@@ -112,7 +111,6 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/mLL_mvvm"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="5dp"
@@ -124,7 +122,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:text="MVVM"
+                    android:text="Excel Functions"
                     android:textAlignment="center"
                     android:textColor="@android:color/background_light"
                     android:textSize="25sp"
@@ -132,7 +130,6 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/mLL_javascript"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="5dp"
@@ -144,7 +141,26 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:text="Javascript"
+                    android:text="Advanced Excel Charts"
+                    android:textAlignment="center"
+                    android:textColor="@android:color/background_light"
+                    android:textSize="25sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="5dp"
+                android:background="@drawable/ic_optionbox"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="Excel Pivot Tables"
                     android:textAlignment="center"
                     android:textColor="@android:color/background_light"
                     android:textSize="25sp"
@@ -153,17 +169,4 @@
 
         </LinearLayout>
     </ScrollView>
-
-<!--    <TextView-->
-<!--        android:id="@+id/text_home"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginStart="8dp"-->
-<!--        android:layout_marginTop="8dp"-->
-<!--        android:layout_marginEnd="8dp"-->
-<!--        android:textAlignment="center"-->
-<!--        android:textSize="20sp"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent" />-->
 </androidx.constraintlayout.widget.ConstraintLayout>
