--- a/app/src/main/res/layout/fragment_web_dev.xml
+++ b/app/src/main/res/layout/fragment_web_dev.xml
@@ -132,6 +132,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/mLL_JavaScript"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="5dp"
@@ -143,7 +144,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:text="Extra"
+                    android:text="JavaScript"
                     android:textAlignment="center"
                     android:textColor="@android:color/background_light"
                     android:textSize="25sp"
